--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -28,7 +28,7 @@ molecule:
       - image: "debian-systemd"
         tag: "latest"
       - image: "debian-systemd"
-        tag: "bookworm"
+        tag: "buster"
       - image: "fedora-systemd"
         tag: "34"
       - image: "fedora-systemd"
@@ -66,7 +66,7 @@ testing:
       - image: "debian-systemd"
         tag: "latest"
       - image: "debian-systemd"
-        tag: "bookworm"
+        tag: "buster"
       - image: "fedora-systemd"
         tag: "34"
       - image: "fedora-systemd"
